--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "blueimp-md5": "^2.18.0",
     "body-parser": "^1.19.0",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multiparty": "^4.2.2",
